# sqltail

./: .gitignore  LICENSE  Makefile  README.md  pytest.ini  setup.cfg
sqltail/: __init__.py  cli.py  monitor.py
src/sqltail/: Makefile  setup.cfg
src/sqltail/scripts/: install-alpine-mysqlclient
src/sqltail/sqltail/: __init__.py  cli.py  db.py  monitor.py
src/sqltail/tests/: test_sqlalchemy.py  test_sqltail.py
templates/: custom.json  simple.json  template.json
tests/: test_sqlalchemy.py  test_sqltail.py
