[metadata]
name = sqltail
version = attr: sqltail.__version__
description = SQL Query Tail
long_description = file: README.md
license = MIT

[options]
python_requires = >= 3.8
packages = find:
zip_safe = False
include_package_data = True
install_requires = 
	arrow
	click
	dotmap
	mysql-connector
	bumpversion

[options.extras_require]
test = 
	pytest
	pytest-click

[options.package_data]
* = 
	VERSION
	LICENSE

[options.entry_points]
console_scripts = 
	sqltail = sqltail.cli:sqltail

[bumpversion]
current_version = 0.0.6
tag-name = "v{new_version}"
tag-message = "Release {new_version}"
tag = True
commit = True

[bumpversion:file:VERSION]

