[metadata]
name = sqltail
version = attr: sqltail.__version__
description =  SQL Query Tail
long_description = file: README.md
license = MIT

[options]
python_requires = >= 3.8
packages = find:
zip_safe = False    
include_package_data = True
# start-modules
install_requires =
  arrow
  click
  dotmap
  mysql-connector

[options.extras_require]
test =  
  pytest
  pytest-click

# end-modules

[options.package_data]
* =
  VERSION
  LICENSE

[options.entry_points]
console_scripts = 
  sqltail = sqltail.cli:sqltail
